tester/tests/compile-pass/method-call.srv

fn methodtest(s: String) -> Int
    s.length()
end
