tester/tests/compile-fail/conditional-predicate-type-checked.srv
fn other(i: Int) -> Int
    i
end

fn cdn(s: String) -> String
    if other(s)
        return s
    end
    s
end
